[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
jni = "0.21.1"
oxipng = { version = "10.0.0", default-features = false }
once_cell = "1.21.3"
symphonia = { version = "0.5.5", default-features = false, features = ["mp3", "ogg"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false